@@ -14,6 +14,7 @@ Changelog
 
 3.3.4 dev
     - [Bugfix] Analysing of __PHP_Incomplete_Class does not throw errors anymore.
+    - [Bugfix] Regression with the mixup of the two methods of code escaping.
 
 3.3.3
     - [Bugfix] Fixed the composer dependencies.
